<resources>
    <string name="app_name"> Kiss My Ass </string>

    <string name="full_screen_ad">ca-app-pub-7763141267799460/4831870230</string>
    <string name="banner_screen_ad">ca-app-pub-7763141267799460/9401670637</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_profile">Profile</string>

    <string name="delete_account">Delete Account</string>

    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_kiss">Kiss</string>
    <string name="btn_message">Send Message</string>

    <string name="kissed_your_ass">This user kissed you.</string>


    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_done">Done</string>
    <string name="search">Search</string>
    <string name="Age">Age</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="about">About</string>

    <string name="no_feedback_text">No any feedback yet!</string>
    <string name="no_message_text">No Any Messages Yet!</string>

    <string name="Home">Home</string>
    <string name="Messages">Messages</string>
    <string name="Feedbacks">Feedbacks</string>
    <string name="Profile">Profile</string>

    <string name="choose_event">Choice Event</string>
    <string name="show_image">Show Profile Image</string>
    <string name="change_image">Change Profile Image</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="message_detail">Message Details</string>
    <string name="delete_message">Delete Message</string>
    <string name="copy_text">Copy Text</string>
    <string name="sent_date">Sent Date : </string>
    <string name="delivered_date">Delivered Date : </string>
    <string name="seen_date">Seen Date : </string>

    <string name="cancel">Cancel</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>

    <string name="pick_image_intent_text">Choose an image</string>
    <string name="pick_image_message">Click on the image to pick a new image:</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
