<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".TiujKiss.Activities.LoginActivity"
    android:background="@color/colorBackGround">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header_form"
            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1">
                <TableRow>
                    <Button
                        android:id="@+id/showSignIn"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textColor="@color/SlateGrey"
                        android:background="@color/White"/>
                    <Button
                        android:id="@+id/showRegister"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_register"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textColor="@color/White"
                        android:background="@color/SlateGrey"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="40dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:background="@color/SlateGrey"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:padding="10dp"
            android:visibility="gone">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">
                <TableRow>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1">

                        <EditText
                            android:id="@+id/register_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>
                <TableRow>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1">

                        <EditText
                            android:id="@+id/register_surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_surname"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>
                <TableRow>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1">

                        <AutoCompleteTextView
                            android:id="@+id/register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>
                <TableRow>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1">

                        <EditText
                            android:id="@+id/register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>
                <TableRow>
                    <RadioGroup
                        android:id="@+id/register_sex"
                        android:layout_width="0dp"
                        android:layout_weight="0.6"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/radio_male"
                            android:checked="true"
                            />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/radio_female"
                            />

                    </RadioGroup>
                </TableRow>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="2dp"
                    android:background="@color/SlateGrey">

                </View>
                <TableRow android:layout_marginTop="5dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/register_birthtext"
                        android:layout_column="1"
                        />
                </TableRow>
                <TableRow>
                    <Button
                        android:id="@+id/email_register_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_register"
                        android:background="@color/SlateGrey"
                        android:textStyle="bold"
                        android:textColor="@color/White"
                        android:layout_column="1"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </LinearLayout>
    <!-- Login progress -->

</ScrollView>



</LinearLayout>
